--- a/back/package.json
+++ b/back/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.15"
   }
 }
