--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "bootstrap-vue-3": "^0.1.7",
+    "eslint": "^8.12.0",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
